<resources xmlns:tools="http://schemas.android.com/tools"
           tools:ignore="MissingTranslation">
    <string name="app_name">金科玉律</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="alphabet_and_number">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>

    <string name="terms_1">欢迎使用金科玉律！</string>
    <string name="terms_2">\t\t\t 请务必认真阅读和理解本《金科玉律app使用服务协议》（以下简称“《协议》”）中规定的所有权利和限制。除非您接受本《协议》条款，否则您无权下载、安装或使用随附本《协议》的金科玉律APP（以下简称“本App”）及其相关服务。您一旦安装、注册、下载、访问或以其它方式使用本软件产品，将视为对本《协议》的接受，即表示您同意接受本《协议》各项条款的约束。如果您不同意本《协议》中的条款，请不要安装、使用本App。\n\t\t\t 本《协议》是用户与深圳市金科玉律法律咨询服务有限公司之间关于用户下载、安装、注册、使用的法律协议。\n\t\t\t 您将被视为已经仔细阅读并同意遵守本协议，本公司会根据法律法规及其他情况变化在必要时修改服务条款或规则，服务条款一旦发生变动，请用户及时关注和了解该变动。您在修改条款发布之后继续使用平台，即表示您同意且接受该等修改。在适用法律允许的最大范围内，本公司保留对本协议、操作规则或特别条款的最终解释权。</string>
    <string name="terms_3">一、定义条款</string>
    <string name="terms_4">\t\t\t “用户”：接受并同意本协议全部条款及本APP发布的其他全部服务条款和操作规则、通过本APP后台管理员新建账号的app使用者。</string>
    <string name="terms_5">二、服务规则</string>
    <string name="terms_6">\t\t\t 1.需维护本APP的客观性、真实性，不得利用本APP用户身份进行违反诚信的任何行为，\n\t\t\t 2.用户应当遵守法律法规应当谨慎合理使用和妥善保管本APP账号及密码，对其本APP账号和密码下进行的行为和发生的事件负责。\n\t\t\t 3.用户应当遵守法律法规、规章、规范性文件及政策要求的规定，不得在本APP或利用本APP服务从事非法或其他损害本APP或第三方权益的活动，如发送或接收任何违法、违规、违反公序良俗、侵犯他人权益的信息，发送或接收传销材料或存在其他危害的信息或言论，未经本APP授权使用或伪造本APP电子邮件题头信息等。</string>
    <string name="terms_7">三、用户的权利和义务</string>
    <string name="terms_8">\t\t\t 1.用户有权按照本协议约定接受本APP提供的本APP网络平台服务。\n\t\t\t 2.用户有权在注册时选择是否订阅本APP发送电子邮件或短消息，并在注册成功后有权随时订阅或退订本APP该等信息。\n\t\t\t 3.用户有权随时终止使用本APP服务，不得发布任何侵犯他人著作权、商标权等知识产权或其他合法权利（如肖像权、隐私权）的内容；如果有其他用户或权利人发现用户发布的信息涉嫌知识产权、或其他合法权益争议的，这些用户或权利人有权要求本APP删除用户发布的信息，或者采取其他必要措施予以制止，本APP将会依法采取这些措施。\n\t\t\t 4.用户应保证其在注册时和提交订单时所提供的姓名、联系方式、联系地址等全部信息真实、完整、准确，并当上述信息发生变更时及时进行更新提供给本APP的信息。</string>
    <string name="terms_9">四、本APP的权利和义务</string>
    <string name="terms_10">\t\t\t 1.如用户不具备本协议约定的注册资格，则本APP有权拒绝用户进行注册，对已注册的用户有权注销其本APP会员账号，本APP因此而遭受损失的有权向前述用户或其法定代理人主张赔偿。同时，本APP保留其他任何情况下决定是否接受用户注册的权利。\n\t\t\t 2.本APP通过技术检测、人工抽检等检测方式合理怀疑用户提供的信息错误、不实、失效或不完整时，有权通知用户更正、更新信息或中止、终止为其提供本APP服务。本APP有权在发现本APP上显示的任何信息存在明显错误时，对信息予以更正。\n\t\t\t 3.本APP保留修改、中止或终止本APP服务的权利，本APP行使前述权利将按照法律规定的程序及方式告知用户。本APP应当采取必要的技术手段和管理措施保障本APP的正常运行，并提供必要、可靠的环境。\n\t\t\t 4.本APP有权在本协议履行期间及本协议终止后保留用户的注册信息及用户应用本APP服务期间的全部交易信息，但不得非法使用该等信息。本APP有权随时删除本APP网站内各类不符合国家法律法规、规范性文件或本APP网站规定的用户评价等内容信息，本APP行使该等权利不需提前通知用户。</string>
    <string name="terms_11">五、隐私保护</string>
    <string name="terms_12">\t\t\t 1.在遵守法律的前提下，为向用户提供优质、便捷的服务，当用户注册本APP账户时，或访问本APP站及其相关网站、本APP移动设备客户端时，或使用本APP提供的服务时，本APP可能会记录用户操作的相关信息或采集用户的以下信息。您应对账户信息及密码承担保密责任，因您未能尽到信息安全和保密责任而致使您的账户发生任何问题的，您应承担全部责任。同时，因网络环境存在众多不可预知因素，因您自身终端网络原因（包括但不限于断网、黑客攻击、病毒等）造成您的账户或个人信息等被第三方窃取的，本APP不承担赔偿责任。\n\t\t\t 2.在用注册本APP账户及使用本APP提供的各项服务时，为识别用户的身份，可能要向本APP提供一些个人信息（包括但不限于姓名、身份证明、地址、电话号码、电子邮件地址等信息及相关附加信息（如您所在的省份和城市等）。\n\t\t\t 3.如用户使用的本APP服务需与用户的银行账户或其他支付工具的账户关联方能实现时，用户需要向本APP提供用户的银行账户信息或其他支付工具的账户信息。为便于用户查询自己的交易状态或历史记录，本APP会保存用户使用本APP服务产生的交易信息。\n\t\t\t 4.为更好地识别用户的身份以充分保护用户的账户安全，当用户访问本APP站及其相关网站、本APP移动设备客户端时，或使用本APP提供的服务时，本APP可能会记录用户操作的相关信息，包括但不限于用户的计算机IP地址、设备标识符、硬件型号、操作系统版本、用户的位置以及与本APP服务相关的日志信息。\n\t\t\t 5.除上述信息外，本APP还可能为了提供服务及改进服务质量的合理需要而收集用户的其他信息，包括用户与本APP的客户服务团队联系时用户提供的相关信息，用户参与问卷调查时向本APP发送的问卷答复信息，以及用户与本APP及本APP关联公司互动时本APP收集的相关信息。与此同时，为提高用户使用本APP提供的服务的安全性，更准确地预防钓鱼网站欺诈和木马病毒，本APP可能会通过了解一些用户的网络使用习惯、用户常用的软件信息等手段来判断用户账户的风险，并可能会记录一些本APP认为有风险的URL。\n\t\t\t 6.本APP尊重并保护所有使用平台服务用户的个人隐私权。 您一旦注册成功，成为平台的合法用户，将得到一个用户名和密码。您需维护自己的账户和密码之安全。您应谨慎合理的保存、使用您的账户信息。您若发现任何非法使用您的账户或其他存在安全漏洞的情况的，请立即通知平台。您不得将在平台注册获得的账号、密码等账户信息提供给他人使用，否则您应与实际使用人承担由此产生的连带责任。本APP不会向任何无关第三方提供、出售、出租、分享或交易您的个人信息，除非事先得到您的许可。\n\t\t\t 7.为保障用户的信息安全，本APP一直并将继续努力采取各种合理的物理、电子和管理方面的安全措施来保护用户信息，使用户的信息不会被泄漏、毁损或者丢失，包括但不限于信息加密存储、数据中心的访问控制。本APP对可能接触到用户的信息的员工或外包人员也采取了严格管理，包括但不限于根据岗位的不同设置不同的权限，与员工签署保密协议等措施。\n\t\t\t 8.为使用户知晓自己使用本APP服务的情况或了解本APP的服务，向用户发送服务状态的通知、营销活动及其他商业性电子信息。如您通过平台中提供其他网站的链接,使用该网站的服务,请参考该网站对于您隐私权保护的相关条款，本APP将不为其他网站的隐私权保护规定负责。\n\t\t\t 9.不论在何种情况下，本APP对由于信息网络设备维护、信息网络连接故障、电脑、通讯或其他系统的故障、电力故障、罢工、劳动争议、暴乱、起义、骚乱、生产力或生产资料不足、火灾、洪水、风暴、爆炸、战争、政府行为、司法行政机关的命令、其他不可抗力或第三方的不作为而造成的不能服务或延迟服务不承担责任。</string>
    <string name="terms_13">六、协议生效</string>
    <string name="terms_14">\t\t\t 本协议于用户点击本APP注册页面的同意注册并完成注册程序、获得本APP账号和密码时生效，对本APP和用户均具有约束力。</string>


</resources>
