<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/title"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:lineSpacingExtra="5dp"
                android:lineSpacingMultiplier="1.1"
                android:text="@string/terms_1"
                android:textColor="@color/text_gray999"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:lineSpacingExtra="5dp"
                android:lineSpacingMultiplier="1.1"
                android:text="@string/terms_2"
                android:textColor="@color/text_gray999"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:lineSpacingExtra="5dp"
                android:lineSpacingMultiplier="1.1"
                android:text="@string/terms_3"
                android:textColor="@color/text_gray999"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:lineSpacingExtra="5dp"
                android:lineSpacingMultiplier="1.1"
                android:text="@string/terms_4"
                android:textColor="@color/text_gray999"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:lineSpacingExtra="5dp"
                android:lineSpacingMultiplier="1.1"
                android:text="@string/terms_5"
                android:textColor="@color/text_gray999"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:lineSpacingExtra="5dp"
                android:lineSpacingMultiplier="1.1"
                android:text="@string/terms_6"
                android:textColor="@color/text_gray999"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:lineSpacingExtra="5dp"
                android:lineSpacingMultiplier="1.1"
                android:text="@string/terms_7"
                android:textColor="@color/text_gray999"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:lineSpacingExtra="5dp"
                android:lineSpacingMultiplier="1.1"
                android:text="@string/terms_8"
                android:textColor="@color/text_gray999"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:lineSpacingExtra="5dp"
                android:lineSpacingMultiplier="1.1"
                android:text="@string/terms_9"
                android:textColor="@color/text_gray999"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:lineSpacingExtra="5dp"
                android:lineSpacingMultiplier="1.1"
                android:text="@string/terms_10"
                android:textColor="@color/text_gray999"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:lineSpacingExtra="5dp"
                android:lineSpacingMultiplier="1.1"
                android:text="@string/terms_11"
                android:textColor="@color/text_gray999"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:lineSpacingExtra="5dp"
                android:lineSpacingMultiplier="1.1"
                android:text="@string/terms_12"
                android:textColor="@color/text_gray999"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:lineSpacingExtra="5dp"
                android:lineSpacingMultiplier="1.1"
                android:text="@string/terms_13"
                android:textColor="@color/text_gray999"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:lineSpacingExtra="5dp"
                android:lineSpacingMultiplier="1.1"
                android:text="@string/terms_14"
                android:textColor="@color/text_gray999"
                android:layout_marginBottom="25dp"
                android:textSize="14sp"/>
        </LinearLayout>


    </ScrollView>


</LinearLayout>